--- a/home-darts-web/angular.json
+++ b/home-darts-web/angular.json
@@ -8,7 +8,7 @@
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "hd",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
