--- a/home-darts-back/package.json
+++ b/home-darts-back/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node src/index.js production",
+    "dev": "nodemon src/index.js debug"
   },
   "author": "tdedetd",
   "license": "ISC",
