front. import aliases

--- a/home-darts-web/tsconfig.json
+++ b/home-darts-web/tsconfig.json
@@ -23,7 +23,12 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@config": ["src/app/config"],
+      "@constants/*": ["src/app/utils/constants/*"],
+      "@models/*": ["src/app/models/*"],
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
