--- a/home-darts-back/package.json
+++ b/home-darts-back/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
     "start": "node dist/index.js production",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js debug\"",
@@ -18,8 +19,10 @@
     "pg": "^8.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.1",
+    "@types/pg": "^8.6.6",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
