--- a/home-darts-web/package.json
+++ b/home-darts-web/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "^16.0.1",
     "@angular/router": "^16.0.1",
     "@ngneat/until-destroy": "^10.0.0-beta.0",
+    "@ngrx/effects": "^16.0.1",
+    "@ngrx/store": "^16.0.1",
+    "@ngrx/store-devtools": "^16.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.13.0"
