front. refactoring: tsconfog alias, throwsPerTurn

--- a/home-darts-web/tsconfig.json
+++ b/home-darts-web/tsconfig.json
@@ -27,6 +27,7 @@
     "paths": {
       "@config": ["src/app/config"],
       "@constants/*": ["src/app/utils/constants/*"],
+      "@functions/*": ["src/app/utils/functions/*"],
       "@models/*": ["src/app/models/*"],
       "@modules/*": ["src/app/modules/*"],
     }
