--- a/home-darts-web/package.json
+++ b/home-darts-web/package.json
@@ -8,7 +8,9 @@
     "build:stats": "ng build --stats-json",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "analyze": "webpack-bundle-analyzer dist/home-darts-web/stats.json"
+    "analyze": "webpack-bundle-analyzer dist/home-darts-web/stats.json",
+    "lint": "ng lint",
+    "lint-fix": "ng lint --fix"
   },
   "private": true,
   "dependencies": {
@@ -33,9 +35,17 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.3",
+    "@angular-eslint/builder": "^17.1.1",
+    "@angular-eslint/eslint-plugin": "^17.1.1",
+    "@angular-eslint/eslint-plugin-template": "^17.1.1",
+    "@angular-eslint/template-parser": "^17.1.1",
     "@angular/cli": "~16.2.3",
     "@angular/compiler-cli": "^16.2.6",
+    "@ngrx/eslint-plugin": "^17.0.1",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
