--- a/home-darts-web/.eslintrc.json
+++ b/home-darts-web/.eslintrc.json
@@ -23,19 +23,67 @@
     "@typescript-eslint/prefer-for-of": "error",
     "@typescript-eslint/quotes": ["error", "single"],
     "@typescript-eslint/semi": ["error", "always"],
+    "array-bracket-spacing": ["error", "never"],
+    "array-callback-return": "error",
+    "block-scoped-var": "error",
+    "block-spacing": ["error", "always"],
+    "brace-style": "error",
+    "comma-spacing": ["error", { "before": false, "after": true }],
+    "computed-property-spacing": "error",
+    "curly": ["error", "all"],
+    "default-case": "error",
+    "eqeqeq": "error",
+    "func-call-spacing": ["error", "never"],
+    "key-spacing": ["error", { "beforeColon": false, "afterColon": true }],
+    "keyword-spacing": "error",
+    "line-comment-position": ["error", { "position": "above" }],
+    "lines-around-comment": ["error", { "beforeLineComment": true }],
     "max-len": ["error", {
       "code": 120,
       "ignorePattern": "^import ",
       "ignoreUrls": true
     }],
-    "no-compare-neg-zero": "error",
+    "max-depth": ["error", 4],
+    "max-nested-callbacks": ["error", 4],
+    "max-statements-per-line": ["error", { "max": 1 }],
+    "new-parens": "error",
+    "no-alert": "error",
+    "no-catch-shadow": "error",
     "no-empty-function": "off",
     "no-eq-null": "error",
+    "no-eval": "error",
+    "no-floating-decimal": "error",
+    "no-implicit-coercion": "error",
+    "no-inline-comments": "error",
+    "no-invalid-this": "error",
+    "no-labels": "error",
+    "no-lone-blocks": "error",
+    "no-multi-assign": "error",
+    "no-multi-spaces": "error",
+    "no-new-func": "error",
+    "no-new-object": "error",
+    "no-new-wrappers": "error",
+    "no-param-reassign": "error",
+    "no-proto": "error",
+    "no-return-assign": "error",
+    "no-return-await": "error",
     "no-unused-vars": "off",
+    "no-script-url": "error",
     "no-self-compare": "error",
+    "no-tabs": "error",
+    "no-throw-literal": "error",
+    "no-undef-init": "error",
+    "no-unmodified-loop-condition": "error",
+    "no-useless-call": "error",
+    "no-useless-concat": "error",
+    "no-useless-return": "error",
+    "no-warning-comments": "warn",
+    "no-with": "error",
     "no-void": "error",
+    "prefer-promise-reject-errors": ["error", { "allowEmptyReject": true }],
     "quotes": "off",
-    "valid-typeof": "error"
+    "valid-typeof": "error",
+    "yoda": "error"
   },
   "overrides": [
     {
@@ -62,6 +110,7 @@
             "style": "camelCase"
           }
         ],
+        "@ngrx/avoid-combining-selectors": "error",
         "@ngrx/avoid-cyclic-effects": "error",
         "@ngrx/avoid-mapping-selectors": "error",
         "@ngrx/good-action-hygiene": "error",
@@ -130,6 +179,7 @@
         "@typescript-eslint/no-explicit-any": "warn",
         "@typescript-eslint/prefer-includes": "error",
         "@typescript-eslint/restrict-plus-operands": "error",
+        "no-implicit-globals": "error",
         "prefer-const": "error"
       }
     },
