--- a/home-darts-web/.eslintrc.json
+++ b/home-darts-web/.eslintrc.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/semi": ["error", "always"],
     "array-bracket-spacing": ["error", "never"],
     "array-callback-return": "error",
+    "arrow-spacing": ["error", { "before": true, "after": true }],
     "block-scoped-var": "error",
     "block-spacing": ["error", "always"],
     "brace-style": "error",
@@ -49,6 +50,7 @@
     "new-parens": "error",
     "no-alert": "error",
     "no-catch-shadow": "error",
+    "no-duplicate-imports": "error",
     "no-empty-function": "off",
     "no-eq-null": "error",
     "no-eval": "error",
@@ -72,16 +74,33 @@
     "no-self-compare": "error",
     "no-tabs": "error",
     "no-throw-literal": "error",
+    "no-trailing-spaces": "error",
     "no-undef-init": "error",
     "no-unmodified-loop-condition": "error",
+    "no-unneeded-ternary": "error",
     "no-useless-call": "error",
     "no-useless-concat": "error",
     "no-useless-return": "error",
     "no-warning-comments": "warn",
     "no-with": "error",
+    "no-whitespace-before-property": "error",
     "no-void": "error",
+    "one-var": ["error", "never"],
+    "operator-assignment": ["error", "always"],
+    "object-curly-spacing": ["error", "always", { "arraysInObjects": true, "objectsInObjects": false }],
+    "object-property-newline": ["error", { "allowMultiplePropertiesPerLine": true }],
     "prefer-promise-reject-errors": ["error", { "allowEmptyReject": true }],
     "quotes": "off",
+    "quote-props": ["error", "consistent-as-needed"],
+    "semi": "off",
+    "semi-spacing": ["error", { "before": false, "after": true }],
+    "space-before-blocks": "error",
+    "space-before-function-paren": ["error", "never"],
+    "space-in-parens": ["error", "never"],
+    "space-infix-ops": ["error", { "int32Hint": true }],
+    "space-unary-ops": "error",
+    "spaced-comment": ["error", "always"],
+    "switch-colon-spacing": ["error", { "after": true, "before": false }],
     "valid-typeof": "error",
     "yoda": "error"
   },
