--- a/home-darts-web/package.json
+++ b/home-darts-web/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0",
+    "start:mock": "ng serve --host 0.0.0.0 --configuration development-mock",
     "build": "ng build",
+    "build:mock": "ng build --configuration production-mock",
     "build:stats": "ng build --stats-json",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
