--- a/home-darts-back/package.json
+++ b/home-darts-back/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nocache": "^3.0.4",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "sequelize": "^6.37.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
