--- a/home-darts-web/package.json
+++ b/home-darts-web/package.json
@@ -30,6 +30,7 @@
     "@ngrx/effects": "^16.2.0",
     "@ngrx/store": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
+    "chart.js": "^4.4.2",
     "js-md5": "^0.8.3",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
