--- a/home-darts-web/angular.json
+++ b/home-darts-web/angular.json
@@ -102,16 +102,16 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "home-darts-web:build:production"
+              "buildTarget": "home-darts-web:build:production"
             },
             "development": {
-              "browserTarget": "home-darts-web:build:development"
+              "buildTarget": "home-darts-web:build:development"
             },
             "production-mock": {
-              "browserTarget": "home-darts-web:build:production-mock"
+              "buildTarget": "home-darts-web:build:production-mock"
             },
             "development-mock": {
-              "browserTarget": "home-darts-web:build:development-mock"
+              "buildTarget": "home-darts-web:build:development-mock"
             }
           },
           "defaultConfiguration": "development"
@@ -119,7 +119,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "home-darts-web:build"
+            "buildTarget": "home-darts-web:build"
           }
         },
         "test": {
