--- a/home-darts-web/package.json
+++ b/home-darts-web/package.json
@@ -16,35 +16,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.6",
-    "@angular/cdk": "^16.2.5",
-    "@angular/common": "^16.2.6",
-    "@angular/compiler": "^16.2.6",
-    "@angular/core": "^16.2.6",
-    "@angular/forms": "^16.2.6",
-    "@angular/material": "^16.2.5",
-    "@angular/platform-browser": "^16.2.6",
-    "@angular/platform-browser-dynamic": "^16.2.6",
-    "@angular/router": "^16.2.6",
+    "@angular/animations": "^17.3.5",
+    "@angular/cdk": "^17.3.5",
+    "@angular/common": "^17.3.5",
+    "@angular/compiler": "^17.3.5",
+    "@angular/core": "^17.3.5",
+    "@angular/forms": "^17.3.5",
+    "@angular/material": "^17.3.5",
+    "@angular/platform-browser": "^17.3.5",
+    "@angular/platform-browser-dynamic": "^17.3.5",
+    "@angular/router": "^17.3.5",
     "@ngneat/until-destroy": "^10.0.0",
-    "@ngrx/effects": "^16.2.0",
-    "@ngrx/store": "^16.2.0",
-    "@ngrx/store-devtools": "^16.2.0",
+    "@ngrx/effects": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
+    "@ngrx/store-devtools": "^17.2.0",
     "chart.js": "^4.4.2",
     "js-md5": "^0.8.3",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
-    "zone.js": "^0.13.0"
+    "zone.js": "^0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.3",
+    "@angular-devkit/build-angular": "^17.3.5",
     "@angular-eslint/builder": "^17.1.1",
     "@angular-eslint/eslint-plugin": "^17.1.1",
     "@angular-eslint/eslint-plugin-template": "^17.1.1",
     "@angular-eslint/template-parser": "^17.1.1",
-    "@angular/cli": "~16.2.3",
-    "@angular/compiler-cli": "^16.2.6",
+    "@angular/cli": "~17.3.5",
+    "@angular/compiler-cli": "^17.3.5",
     "@ngrx/eslint-plugin": "^17.0.1",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
@@ -55,7 +56,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4",
+    "typescript": "~5.4.5",
     "webpack-bundle-analyzer": "^4.9.1"
   }
 }
