--- a/home-darts-web/package.json
+++ b/home-darts-web/package.json
@@ -32,6 +32,7 @@
     "@ngrx/store-devtools": "^17.2.0",
     "chart.js": "^4.4.2",
     "js-md5": "^0.8.3",
+    "ngx-skeleton-loader": "^9.0.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "^0.14.4"
