--- a/home-darts-web/.eslintrc.json
+++ b/home-darts-web/.eslintrc.json
@@ -100,8 +100,8 @@
   },
   "overrides": [
     {
+      "plugins": ["@ngrx"],
       "files": ["**.ts"],
-      "extends": ["plugin:@ngrx/recommended"],
       "parserOptions": {
         "project": ["./tsconfig.json"]
       },
